cmake_minimum_required(VERSION 3.10)
PROJECT(gstblurhashsrc  C)

include(FindPkgConfig)
PKG_SEARCH_MODULE(GSTREAMER1 REQUIRED gstreamer-1.0)
PKG_SEARCH_MODULE(GSTREAMER1_BASE REQUIRED gstreamer-base-1.0)
PKG_SEARCH_MODULE(GSTREAMER1_VIDEO REQUIRED gstreamer-video-1.0)

INCLUDE_DIRECTORIES(${GSTREAMER1_INCLUDE_DIRS}
	${GSTREAMER1_BASE_INCLUDE_DIRS}
	${GSTREAMER1_VIDEO_INCLUDE_DIRS})

ADD_LIBRARY(gstblurhashsrc SHARED
	src/gstblurhashsrc.c
	src/decode.c
)

TARGET_LINK_LIBRARIES(gstblurhashsrc  
	${GSTREAMER1_LIBRARY}
	${GSTREAMER1_BASE_LIBRARIES}
	${GSTREAMER1_VIDEO_LIBRARIES})
